# descarga_qi_nai_dgasat_24h

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.bat
src/dgasat24h/: __init__.py  app.py  cli.py  dashboard.html  engine.py
src/dgasat24h/data/: catalogo_v0.4.xlsx  umbrales_dga_R6_R7_R8_R16.xlsx
